--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -19,6 +19,7 @@
  .image-with-text .grid {
      padding: 85px 48px; 
      border-radius: 32px;
+     background-color:white;
   }
 
   .image-with-text__text p:first-child strong:first-child,
@@ -46,13 +47,13 @@ color:#036788
 /* .rich-text__blocks {max-width: 82rem; margin: 0 auto;} */
 /* END Custom css by dkalandadze*/
 {%- endstyle -%}
-<div class="isolate">
+{% comment %} <div class="isolate">
   <div class="rich-text content-container color-background-1 gradient rich-text--full-width content-container--full-width section-template--20498569396503__da214b1e-b497-4bfa-87ea-a347335f3f8e-padding">
     <div class="rich-text__wrapper rich-text__wrapper--center page-width">
       <div class="rich-text__blocks center"><h2 class="rich-text__heading rte inline-richtext h1">Why Are CLARI Hearing™ Aids the Preferred Choice <br> for Over 50,000 Satisfied Customers?</h2></div>
     </div>
   </div>
-</div>
+</div> {% endcomment %}
 {% comment %} {% endif %}  
   {% endcomment %}
 
