--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -42,6 +42,7 @@
   justify-content: center;
   align-items: center;
   gap: 40px;
+  padding: 0 20px;
 }
 .featured_section_logos svg {
   width: 100%;
@@ -1429,7 +1430,7 @@ a.product__text {
   }
 
   .thumbnail-list__item.slider__slide {
-    width: calc(33% - 0.6rem);
+    width: calc(33% - 3rem);
   }
 }
 
