--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -11,16 +11,26 @@
       padding-top: 64px;
       padding-bottom: 32px;
     }
+
+     .image-with-text .grid {
+     padding: 85px 48px; 
+     border-radius: 32px;
+     background-color:white;
+  }
+  }
+
+ .image-with-text .grid {
+     padding:0; 
+     border-radius: 32px;
+     background-color:white;
+     
   }
 
 .image-with-text__content > :first-child:is(.image-with-text__heading) {
     font-size:32px;
   }
- .image-with-text .grid {
-     padding: 85px 48px; 
-     border-radius: 32px;
-     background-color:white;
-  }
+
+
 
   .image-with-text__text p:first-child strong:first-child,
   .image-with-text__text p:first-child strong:nth-child(2){
